--- a/style.css
+++ b/style.css
@@ -271,3 +271,16 @@ body{
 
 }
 */
+
+/*eventListener
+ #box{
+    background-color: lightblue;
+    width:300px;
+    height:300px;
+    font-size: 4.5rem;
+    font-weight:bold;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+*/
